<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- TODO: Icons downloaded from https://design.google.com/icons/ -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/title_map" />
        <item
            android:id="@+id/nav_poi_table"
            android:title="@string/title_poi_table" />
        <item
            android:id="@+id/nav_sector_table"
            android:title="@string/title_sector_table" />
    </group>

    <item android:title="@string/title_manage">
        <menu>
            <item
                android:id="@+id/nav_poi"
                android:icon="@drawable/ic_add_location_black_24dp"
                android:title="@string/title_poi" />
            <item
                android:id="@+id/nav_area"
                android:icon="@drawable/ic_filter_hdr_black_24dp"
                android:title="@string/title_area" />
            <item
                android:id="@+id/nav_weather"
                android:icon="@drawable/ic_satellite_black_24dp"
                android:title="@string/title_weather" />
            <item
                android:id="@+id/nav_clear"
                android:icon="@drawable/ic_delete_black_24dp"
                android:title="@string/title_clear" />
            <item
                android:id="@+id/nav_save"
                android:icon="@drawable/ic_backup_black_24dp"
                android:title="@string/title_save" />
            <item
                android:id="@+id/nav_load"
                android:title="@string/title_load" />
        </menu>
    </item>

</menu>
